fix: 添加跨域中间件

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
+    "koa2-cors": "^2.0.6",
     "mysql2": "^2.3.3"
   },
   "scripts": {
