--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@koa/multer": "^3.0.2",
     "@koa/router": "^12.0.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.0.3",
@@ -11,6 +12,7 @@
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa2-cors": "^2.0.6",
+    "multer": "1.4.5-lts.1",
     "mysql2": "^2.3.3"
   },
   "scripts": {
